added documentations
